--- a/_pages/00_schedule.html
+++ b/_pages/00_schedule.html
@@ -36,7 +36,7 @@ search_exclude: true
 
 </style>
 
-<div class="calendar" style="width: 80vw; height: 90%; margin: auto;">
+<div class="calendar" style="position: absolute; left: 0; right: 0; margin-left: auto; margin-right: auto; ">
   
     <div style="grid-column-start: 1; background-color: #AC80A0;" class="column">
       <div class="time-slot" style="grid-row-start: 1">
