--- a/_pages/00_schedule.html
+++ b/_pages/00_schedule.html
@@ -19,9 +19,11 @@ search_exclude: true
 
     .time-slot {
         grid-row-end: span 6;
-        text-align: center;
-        align-items: center;
         border-bottom: 1px solid black;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
     }
 
     .class-time {
