deploy: 073b6d68d29eba4bd0c33803d3274d07782c6ffd

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -83,9 +83,11 @@ window.onload = wrap_img;
 
     .time-slot {
         grid-row-end: span 6;
-        text-align: center;
-        align-items: center;
         border-bottom: 1px solid black;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
     }
 
     .class-time {
