edit index and add toc + dividers to reading notes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
-
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+## My name is Anthony Vo, and I'm a Computer Science major at the University of California, Irvine. This site is a database for all of my notes, whether it be from lectures, discussions, or readings. Thanks for checking out my page!
 
 # Posts
